Summarized the "jako" examples.

--- a/example.tex
+++ b/example.tex
@@ -1667,6 +1667,27 @@
 \begin{tabular}{c}
 \begin{dependency}[edge unit distance=3ex]
   \begin{deptext}
+    Mluví     \& jako \& nějaký \& učitel  \& . \\
+    He-speaks \& like \& some   \& teacher \& . \\
+  \end{deptext}
+  \depedge{1}{5}{punct}
+  \depedge{1}{4}{obl}
+  \depedge{4}{2}{case}
+  \depedge{4}{3}{det}
+  \deproot[edge unit distance=3.75ex]{1}{root}
+  \depedge[edge below]{1}{5}{punct}
+  \depedge[edge below]{1}{4}{obl:jako}
+  \depedge[edge below]{4}{2}{case}
+  \depedge[edge below]{4}{3}{det}
+  \deproot[edge below,edge unit distance=3.75ex]{1}{root}
+\end{dependency} \\
+`He speaks like some kind of teacher.' \\
+\end{tabular}
+%\end{comment}
+\begin{comment}
+\begin{tabular}{c}
+\begin{dependency}[edge unit distance=3ex]
+  \begin{deptext}
     Nemluvila \& o \& něm \& jako \& o \& otci \& , \& ale \& \textcolor{blue}{(mluvila)} \& jako \& o \& matčinu \& příteli \& . \\
     She-talked-not \& about \& him \& as \& about \& father \& , \& but \& \textcolor{blue}{(she-talked)} \& as \& about \& mother's \& friend \& . \\
   \end{deptext}
@@ -1704,7 +1725,7 @@
 \end{dependency} \\
 `She referred to him as mother's friend, not as father.' \\
 \end{tabular}
-%\end{comment}
+\end{comment}
 
 
 
